EO-V1.1-001: Introduce KernelResponse contracts